fixing color contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1952,7 +1952,7 @@ button,
   border: solid 2px !important;
   border-color: #072227 !important;
   border-radius: 3em;
-  color: #072227 !important;
+  color: #ffffff !important;
   cursor: pointer;
   display: inline-block;
   font-size: 0.6em;
@@ -2062,7 +2062,7 @@ input[type="button"].primary,
 button.primary,
 .button.primary {
   background-color: #ffffff;
-  color: #312450 !important;
+  color: #ffffff !important;
 }
 
 input[type="submit"].primary:after,
